2010-09-16  Alan Modra  <amodra@gmail.com>

	* binutils-all/i386/i386.exp: Don't run on linuxaout.

2010-09-10  Ben Gardiner  <bengardiner@nanometrics.ca>

	* binutils-all/objcopy.exp: Add test of new --interleave-width
	option.

2010-09-03  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* binutils-all/objdump.W: Update DW_OP_reg5 expected output.

2010-08-23  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/elfedit-3.d: New.

	* binutils-all/elfedit.exp: Run elfedit-3.

2010-07-19  Andreas Schwab  <schwab@redhat.com>

	* binutils-all/readelf.s: Ignore "Key to Flags" contents.
	* binutils-all/readelf.s-64: Likewise.
	* binutils-all/i386/compressed-1b.d: Likewise.
	* binutils-all/i386/compressed-1c.d: Likewise.
	* binutils-all/x86-64/compressed-1b.d: Likewise.
	* binutils-all/x86-64/compressed-1c.d: Likewise.

2010-07-14  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/i386/compressed-1a.d: Fix a typo.
	* binutils-all/i386/compressed-1b.d: Likewise.
	* binutils-all/i386/compressed-1c.d: Likewise.
	* binutils-all/x86-64/compressed-1a.d: Likewise.
	* binutils-all/x86-64/compressed-1b.d: Likewise.
	* binutils-all/x86-64/compressed-1c.d: Likewise.

2010-07-14  H.J. Lu  <hongjiu.lu@intel.com>

	* config/default.exp (binutils_assemble): Use
	default_binutils_assemble_flags.
	(binutils_assemble_flags): New.

	* lib/utils-lib.exp (default_binutils_assemble): Renamed to ...
	(default_binutils_assemble_flags): This.  Add asflags and
	pass it to target_assemble.
	(run_dump_test): Support assembler flags.

	* binutils-all/i386/compressed-1.s: New.
	* binutils-all/i386/compressed-1a.d: Likewise.
	* binutils-all/i386/compressed-1b.d: Likewise.
	* binutils-all/i386/compressed-1c.d: Likewise.
	* binutils-all/i386/i386.exp: Likewise.
	* binutils-all/x86-64/compressed-1.s: Likewise.
	* binutils-all/x86-64/compressed-1a.d: Likewise.
	* binutils-all/x86-64/compressed-1b.d: Likewise.
	* binutils-all/x86-64/compressed-1c.d: Likewise.
	* binutils-all/x86-64/x86-64.exp: Likewise.
